@@ -1,6 +1,11 @@
                                                          -*- coding: utf-8 -*-
 Changes with mod_fcgid 2.3
 
+  *) Don't try to set the ownership of the socket directory unless running
+     as root, resolving startup failures when starting as a non-root id but
+     httpd.conf specifies a different User/Group (e.g., when using the 
+     default httpd.conf as non-root).  [Jeff Trawick]
+
   *) Fix formatting of several messages, including the oft-seen "mod_fcgid: 
      Can't create shared memory for size %zu byte".  [Jeff Trawick]
 
